tests/fixtures/stl/errors/test_undefined_record.stl
// Error: reference to undefined record
prompt broken {
  is {
    item is NonExistentRecord;
  }
}
export broken as main;
